# firefly21

./: .gitignore  ARCHITECTURE.md  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/example/vpntor/: MainActivity.kt  VpnTorService.kt
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/xml/: network_security_config.xml
core/: go.mod  main.go
core/cancel/: context.go
core/config/: parser.go  parser_test.go
core/ipc/: socket.go
core/log/: logger.go
core/tor/: arti.go
core/tunnel/: hev.go
core/vpn/: service.go
core/xray/: core.go
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/models/: log_entry.dart  vpn_state.dart
flutter_app/lib/providers/: vpn_provider.dart
flutter_app/lib/screens/: apps_tab.dart  home_screen.dart  logs_tab.dart  settings_tab.dart  status_tab.dart
flutter_app/lib/services/: ipc_client.dart
flutter_app/lib/utils/: log_formatter.dart
flutter_app/lib/widgets/: log_entry_widget.dart
rust_arti/: Cargo.toml
rust_arti/src/: main.rs
scripts/: build_android.sh  strip_debug.sh
